syntax = "proto3";

import "auth/proto/auth.proto";
import "github.com/cohix/simplcrypto/proto/message.proto";

package taask.server.partner;
option go_package = "github.com/taask/taask-server/partner";

service PartnerService {
	rpc AuthPartner(taask.server.auth.Attempt) returns (taask.server.auth.AttemptResponse);
	rpc StreamUpdates(stream UpdateRequest) returns (stream UpdateRequest);
}

message UpdateRequest {
	string PartnerUUID = 1;
	simpl.crypto.Message EncUpdate = 2;
	simpl.crypto.Signature UpdateSignature = 3;
	simpl.crypto.Message EncDataKey = 4;
	taask.server.auth.Session Session = 5;
	bool IsHealthCheck = 6;
}